--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <script src="index.js"></script>
+    <style>
+        body {
+            background-color: rgb(52, 211, 118);
+        }
+    </style>
 </body>
 </html>
